[gd_scene load_steps=65 format=3 uid="uid://dbgiut3axj026"]

[ext_resource type="Texture2D" uid="uid://dx2jkwm4ubylr" path="res://Assets/Goblin3/Dying/Dying_012.png" id="1"]
[ext_resource type="Texture2D" uid="uid://3kjdq77nixcs" path="res://Assets/Goblin3/Hurt/Hurt_003.png" id="2"]
[ext_resource type="Texture2D" uid="uid://0wa0y5145q3a" path="res://Assets/Goblin3/Hurt/Hurt_008.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bdchi2s6xw1py" path="res://Assets/Goblin3/Dying/Dying_007.png" id="4"]
[ext_resource type="Script" path="res://Scripts/Goblin3.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://cmts0v0bg0qmr" path="res://Assets/Goblin3/Dying/Dying_003.png" id="6"]
[ext_resource type="Texture2D" uid="uid://b6jrvobbdhbc3" path="res://Assets/Goblin3/Dying/Dying_011.png" id="7"]
[ext_resource type="Texture2D" uid="uid://cahmyn8u1rkot" path="res://Assets/Goblin3/Dying/Dying_009.png" id="8"]
[ext_resource type="Texture2D" uid="uid://by3yukdpwd38g" path="res://Assets/Goblin3/Hurt/Hurt_011.png" id="9"]
[ext_resource type="Texture2D" uid="uid://dpr5f5hden8ep" path="res://Assets/Goblin3/Walking/Walking_008.png" id="10"]
[ext_resource type="Texture2D" uid="uid://bldfx2gxmlgig" path="res://Assets/Goblin3/Walking/Walking_015.png" id="11"]
[ext_resource type="Texture2D" uid="uid://ckhcoh6w134o7" path="res://Assets/Goblin3/Walking/Walking_014.png" id="12"]
[ext_resource type="Texture2D" uid="uid://choxdrr73wjuj" path="res://Assets/Goblin3/Walking/Walking_003.png" id="13"]
[ext_resource type="Texture2D" uid="uid://dg6qsgqxtgm8g" path="res://Assets/Goblin3/Walking/Walking_000.png" id="14"]
[ext_resource type="Texture2D" uid="uid://cvhoonmc7yckc" path="res://Assets/Goblin3/Walking/Walking_005.png" id="15"]
[ext_resource type="Texture2D" uid="uid://dwmgvvfamw6fj" path="res://Assets/Goblin3/Hurt/Hurt_006.png" id="16"]
[ext_resource type="Texture2D" uid="uid://bncipcgaxsggr" path="res://Assets/Goblin3/Hurt/Hurt_007.png" id="17"]
[ext_resource type="Texture2D" uid="uid://b2s57u3bf6nhx" path="res://Assets/Goblin3/Hurt/Hurt_004.png" id="18"]
[ext_resource type="Texture2D" uid="uid://dncpw7v1x4xh2" path="res://Assets/Goblin3/Hurt/Hurt_005.png" id="19"]
[ext_resource type="Texture2D" uid="uid://2c3sm4ndjbdq" path="res://Assets/Goblin3/Hurt/Hurt_000.png" id="20"]
[ext_resource type="Texture2D" uid="uid://cecvhp6pqjsvw" path="res://Assets/Goblin3/Hurt/Hurt_001.png" id="21"]
[ext_resource type="Texture2D" uid="uid://bi51og746qmux" path="res://Assets/Goblin3/Walking/Walking_016.png" id="22"]
[ext_resource type="Texture2D" uid="uid://sn74uftpffxi" path="res://Assets/Goblin3/Walking/Walking_010.png" id="23"]
[ext_resource type="Texture2D" uid="uid://dybldk5dbtsu6" path="res://Assets/Goblin3/Walking/Walking_011.png" id="24"]
[ext_resource type="Texture2D" uid="uid://bhrr6tep16rat" path="res://Assets/Goblin3/Walking/Walking_012.png" id="25"]
[ext_resource type="Texture2D" uid="uid://l0lrlbbevl2l" path="res://Assets/Goblin3/Walking/Walking_017.png" id="26"]
[ext_resource type="Texture2D" uid="uid://ek4vmbt68len" path="res://Assets/Goblin3/Walking/Walking_002.png" id="27"]
[ext_resource type="Texture2D" uid="uid://vu4hapvesca2" path="res://Assets/Goblin3/Walking/Walking_009.png" id="28"]
[ext_resource type="Texture2D" uid="uid://dw2ai4prw2rq3" path="res://Assets/Goblin3/Hurt/Hurt_002.png" id="29"]
[ext_resource type="Texture2D" uid="uid://6pf67r51tj81" path="res://Assets/Goblin3/Walking/Walking_001.png" id="30"]
[ext_resource type="Texture2D" uid="uid://ccura2kbco5sr" path="res://Assets/Goblin3/Hurt/Hurt_010.png" id="31"]
[ext_resource type="AudioStream" uid="uid://ba8gu4c4h6vs8" path="res://Assets/Sound/Hit.mp3" id="32"]
[ext_resource type="Texture2D" uid="uid://dtkoxqlho3nk1" path="res://Assets/Goblin3/Walking/Walking_006.png" id="33"]
[ext_resource type="Texture2D" uid="uid://cy6i6ag41ved3" path="res://Assets/Goblin3/Walking/Walking_007.png" id="34"]
[ext_resource type="Texture2D" uid="uid://bncqijtlewbqe" path="res://Assets/Goblin3/Walking/Walking_004.png" id="35"]
[ext_resource type="Texture2D" uid="uid://cqhl2uwtvobvn" path="res://Assets/Goblin3/Hurt/Hurt_009.png" id="36"]
[ext_resource type="Texture2D" uid="uid://dnqtsh7i3ke0l" path="res://Assets/Goblin3/Walking/Walking_013.png" id="37"]
[ext_resource type="Texture2D" uid="uid://buuvahclosneh" path="res://Assets/Goblin3/Dying/Dying_005.png" id="38"]
[ext_resource type="Texture2D" uid="uid://c6dmoysted38u" path="res://Assets/Goblin3/Dying/Dying_013.png" id="39"]
[ext_resource type="Texture2D" uid="uid://b5q71bmpv7cdi" path="res://Assets/Goblin3/Dying/Dying_010.png" id="40"]
[ext_resource type="Texture2D" uid="uid://bh2ld6h37pp6p" path="res://Assets/Goblin3/Dying/Dying_014.png" id="41"]
[ext_resource type="Texture2D" uid="uid://ck6aegkdw5emb" path="res://Assets/Goblin3/Dying/Dying_000.png" id="42"]
[ext_resource type="Texture2D" uid="uid://b20q26nceiub8" path="res://Assets/Goblin3/Dying/Dying_002.png" id="43"]
[ext_resource type="Texture2D" uid="uid://bl2sgatplyrxw" path="res://Assets/Goblin3/Dying/Dying_008.png" id="44"]
[ext_resource type="Texture2D" uid="uid://c8rru0skcep4b" path="res://Assets/Goblin3/Dying/Dying_004.png" id="45"]
[ext_resource type="Texture2D" uid="uid://b4cxu377wkvb7" path="res://Assets/Goblin3/Dying/Dying_001.png" id="46"]
[ext_resource type="Texture2D" uid="uid://d2gs1f6tiectv" path="res://Assets/Goblin3/Dying/Dying_006.png" id="47"]
[ext_resource type="Texture2D" uid="uid://dkd1ggeebturb" path="res://Assets/Goblin3/Attacking/Attacking_000.png" id="48"]
[ext_resource type="Texture2D" uid="uid://bdnkn8muf4ruy" path="res://Assets/Goblin3/Attacking/Attacking_003.png" id="49"]
[ext_resource type="Texture2D" uid="uid://bnkkeyw78n5i7" path="res://Assets/Goblin3/Attacking/Attacking_002.png" id="50"]
[ext_resource type="Texture2D" uid="uid://ceuy0yoh5eegj" path="res://Assets/Goblin3/Attacking/Attacking_001.png" id="51"]
[ext_resource type="Texture2D" uid="uid://dgyfuyrqhy4eg" path="res://Assets/Goblin3/Attacking/Attacking_004.png" id="52"]
[ext_resource type="Texture2D" uid="uid://cbb1rvwe2gjta" path="res://Assets/Goblin3/Attacking/Attacking_005.png" id="53"]
[ext_resource type="Texture2D" uid="uid://bs04jr7ec4irl" path="res://Assets/Goblin3/Attacking/Attacking_006.png" id="54"]
[ext_resource type="Texture2D" uid="uid://m5xjosijlqyy" path="res://Assets/Goblin3/Attacking/Attacking_007.png" id="55"]
[ext_resource type="Texture2D" uid="uid://0s41283qe6x7" path="res://Assets/Goblin3/Attacking/Attacking_008.png" id="56"]
[ext_resource type="Texture2D" uid="uid://c3lu7g4vbcmka" path="res://Assets/Goblin3/Attacking/Attacking_009.png" id="57"]
[ext_resource type="Texture2D" uid="uid://bp8ruqnkjrrqe" path="res://Assets/Goblin3/Attacking/Attacking_010.png" id="58"]
[ext_resource type="Texture2D" uid="uid://xp2j4ssxnldk" path="res://Assets/Goblin3/Attacking/Attacking_011.png" id="59"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("48")
}, {
"duration": 1.0,
"texture": ExtResource("51")
}, {
"duration": 1.0,
"texture": ExtResource("50")
}, {
"duration": 1.0,
"texture": ExtResource("49")
}, {
"duration": 1.0,
"texture": ExtResource("52")
}, {
"duration": 1.0,
"texture": ExtResource("53")
}, {
"duration": 1.0,
"texture": ExtResource("54")
}, {
"duration": 1.0,
"texture": ExtResource("55")
}, {
"duration": 1.0,
"texture": ExtResource("56")
}, {
"duration": 1.0,
"texture": ExtResource("57")
}, {
"duration": 1.0,
"texture": ExtResource("58")
}, {
"duration": 1.0,
"texture": ExtResource("59")
}],
"loop": true,
"name": &"attacking",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("42")
}, {
"duration": 1.0,
"texture": ExtResource("46")
}, {
"duration": 1.0,
"texture": ExtResource("43")
}, {
"duration": 1.0,
"texture": ExtResource("6")
}, {
"duration": 1.0,
"texture": ExtResource("45")
}, {
"duration": 1.0,
"texture": ExtResource("38")
}, {
"duration": 1.0,
"texture": ExtResource("47")
}, {
"duration": 1.0,
"texture": ExtResource("4")
}, {
"duration": 1.0,
"texture": ExtResource("44")
}, {
"duration": 1.0,
"texture": ExtResource("8")
}, {
"duration": 1.0,
"texture": ExtResource("40")
}, {
"duration": 1.0,
"texture": ExtResource("7")
}, {
"duration": 1.0,
"texture": ExtResource("1")
}, {
"duration": 1.0,
"texture": ExtResource("39")
}, {
"duration": 1.0,
"texture": ExtResource("41")
}],
"loop": true,
"name": &"dying",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20")
}, {
"duration": 1.0,
"texture": ExtResource("21")
}, {
"duration": 1.0,
"texture": ExtResource("29")
}, {
"duration": 1.0,
"texture": ExtResource("2")
}, {
"duration": 1.0,
"texture": ExtResource("18")
}, {
"duration": 1.0,
"texture": ExtResource("19")
}, {
"duration": 1.0,
"texture": ExtResource("16")
}, {
"duration": 1.0,
"texture": ExtResource("17")
}, {
"duration": 1.0,
"texture": ExtResource("3")
}, {
"duration": 1.0,
"texture": ExtResource("36")
}, {
"duration": 1.0,
"texture": ExtResource("31")
}, {
"duration": 1.0,
"texture": ExtResource("9")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14")
}, {
"duration": 1.0,
"texture": ExtResource("30")
}, {
"duration": 1.0,
"texture": ExtResource("27")
}, {
"duration": 1.0,
"texture": ExtResource("13")
}, {
"duration": 1.0,
"texture": ExtResource("35")
}, {
"duration": 1.0,
"texture": ExtResource("15")
}, {
"duration": 1.0,
"texture": ExtResource("33")
}, {
"duration": 1.0,
"texture": ExtResource("34")
}, {
"duration": 1.0,
"texture": ExtResource("10")
}, {
"duration": 1.0,
"texture": ExtResource("28")
}, {
"duration": 1.0,
"texture": ExtResource("23")
}, {
"duration": 1.0,
"texture": ExtResource("24")
}, {
"duration": 1.0,
"texture": ExtResource("25")
}, {
"duration": 1.0,
"texture": ExtResource("37")
}, {
"duration": 1.0,
"texture": ExtResource("12")
}, {
"duration": 1.0,
"texture": ExtResource("11")
}, {
"duration": 1.0,
"texture": ExtResource("22")
}, {
"duration": 1.0,
"texture": ExtResource("26")
}],
"loop": true,
"name": &"walking",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(125.5, 114)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(78, 21.125)

[sub_resource type="RectangleShape2D" id="5"]
size = Vector2(154, 100)

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(320, 10)

[node name="Goblin3" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 163
script = ExtResource("5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, 0)
sprite_frames = SubResource("1")
animation = &"walking"
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(21.5, -5)
shape = SubResource("4")

[node name="FloorChecker" type="RayCast2D" parent="."]
target_position = Vector2(0, 250)
collision_mask = 2

[node name="TopChecker" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopChecker"]
position = Vector2(11, -142.875)
shape = SubResource("3")

[node name="SideChecker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="SideChecker"]
position = Vector2(41, -20)
shape = SubResource("5")

[node name="DetectArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource("6")

[node name="HitTimer" type="Timer" parent="."]
one_shot = true

[node name="DieTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SoundHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("32")

[node name="HealthBar" type="ProgressBar" parent="."]
visible = false
modulate = Color(0.270588, 0.937255, 0.294118, 1)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -109.0
offset_top = -184.0
offset_right = 147.0
offset_bottom = -157.0
grow_horizontal = 2
step = 1.0
show_percentage = false
